// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestView when status scan <Completed> 1`] = `
<React.Fragment>
  <HeaderSection
    contentPageInfo={
      Object {
        "title": "some title",
      }
    }
  />
  <CardsView
    cardsViewData={
      Object {
        "visualHelperEnabled": true,
      }
    }
    deps={Object {}}
    scanMetadata={
      Object {
        "timespan": Object {
          "scanComplete": 1900-02-02T11:04:00.000Z,
        },
      }
    }
    userConfigurationStoreData={
      Object {
        "isFirstTime": false,
      }
    }
  />
</React.Fragment>
`;

exports[`TestView when status scan <Failed> 1`] = `
<React.Fragment>
  <HeaderSection
    contentPageInfo={
      Object {
        "title": "some title",
      }
    }
  />
  <ScanningSpinner
    aria-live="assertive"
    isSpinning={false}
    label="Scanning..."
  />
</React.Fragment>
`;

exports[`TestView when status scan <Scanning> 1`] = `
<React.Fragment>
  <HeaderSection
    contentPageInfo={
      Object {
        "title": "some title",
      }
    }
  />
  <ScanningSpinner
    aria-live="assertive"
    isSpinning={true}
    label="Scanning..."
  />
</React.Fragment>
`;

exports[`TestView when status scan <undefined> 1`] = `
<React.Fragment>
  <HeaderSection
    contentPageInfo={
      Object {
        "title": "some title",
      }
    }
  />
  <ScanningSpinner
    aria-live="assertive"
    isSpinning={false}
    label="Scanning..."
  />
</React.Fragment>
`;
